[gd_scene load_steps=29 format=2]

[ext_resource path="res://Hurtbox.gd" type="Script" id=1]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerDeadB.png" type="Texture" id=2]
[ext_resource path="res://SoundEffects/PhysicalSounds/Whush.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Normal/ShamblerIdle.png" type="Texture" id=4]
[ext_resource path="res://SoundEffects/ShamblerSounds/GrowlHurtP.mp3" type="AudioStream" id=5]
[ext_resource path="res://SoundEffects/ShamblerSounds/Aggro1P.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sprites/_art_/Effects/Impact/Swipe1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/_art_/Effects/Impact/Swipe2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerSwingBEye.png" type="Texture" id=9]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerSwungBEye.png" type="Texture" id=10]
[ext_resource path="res://Creatures/BloodyShambler.gd" type="Script" id=11]
[ext_resource path="res://Hitbox.gd" type="Script" id=12]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerIdleBEye.png" type="Texture" id=13]
[ext_resource path="res://SoundEffects/NewSounds/Shamble1.mp3" type="AudioStream" id=14]
[ext_resource path="res://SoundEffects/ShamblerSounds/Moan1P.mp3" type="AudioStream" id=15]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerWalk1BEye.png" type="Texture" id=16]
[ext_resource path="res://Sprites/_art_/ShamblerSprites/Bloody/ShamblerWalk2BEye.png" type="Texture" id=17]
[ext_resource path="res://SoundEffects/NewSounds/Shamble2.mp3" type="AudioStream" id=18]
[ext_resource path="res://SoundEffects/NewSounds/DeepGrumbleBreathR.mp3" type="AudioStream" id=19]

[sub_resource type="CapsuleShape2D" id=4]
radius = 85.0
height = 146.0

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 30, -70, 80, -45, 50, 15, -80, 105, -100, 45 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 7 ), ExtResource( 8 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ShamblerSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/ShamblerSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 40.0, 40.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/ShamblerSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 60, 0 ), Vector2( 60, 0 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ), Vector2( 40, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/ShamblerSprite/Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("Attack")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.6 )
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ShamblerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ShamblerSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, 5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ShamblerSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/ShamblerSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/ShamblerSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/ShamblerSprite/Hitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "Walk"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/ShamblerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ShamblerSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0, 0.0, 6.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/ShamblerSprite/SwingEffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 13 )

[sub_resource type="CircleShape2D" id=2]
radius = 429.141

[sub_resource type="CircleShape2D" id=10]
radius = 309.04

[node name="Shambler" type="KinematicBody2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

[node name="ShamblerSprite" type="Sprite" parent="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Hurtbox" type="Area2D" parent="Sprite/ShamblerSprite"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/ShamblerSprite/Hurtbox"]
position = Vector2( 3, 7 )
shape = SubResource( 4 )

[node name="SwingEffectSprite" type="Sprite" parent="Sprite/ShamblerSprite"]
visible = false
position = Vector2( 24.4444, 0 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="Sprite/ShamblerSprite"]
scale = Vector2( 2, 2 )
script = ExtResource( 12 )
magic = false
is_player_attack = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/ShamblerSprite/Hitbox"]
position = Vector2( 30, -5.5 )
shape = SubResource( 9 )
disabled = true

[node name="Corpse" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 50 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 6 )
anims/Walk = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Sight" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 2 )

[node name="Aggro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 8.0

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 16.706
pitch_scale = 0.92

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0
pitch_scale = 0.78

[node name="Moan1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 15.595
pitch_scale = 0.72

[node name="Idlebreath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
pitch_scale = 1.71

[node name="Anger1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
pitch_scale = 0.85

[node name="Anger2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
pitch_scale = 0.88

[node name="HurtTime" type="Timer" parent="."]

[node name="Swinger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Swinger"]
shape = SubResource( 10 )

[node name="SwingerReset" type="Timer" parent="Swinger"]
wait_time = 0.5
one_shot = true

[node name="RandomSound" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="HurtTime" to="." method="_on_HurtTime_timeout"]
[connection signal="body_entered" from="Swinger" to="." method="_on_Swinger_body_entered"]
[connection signal="body_exited" from="Swinger" to="." method="_on_Swinger_body_exited"]
[connection signal="timeout" from="Swinger/SwingerReset" to="." method="_on_SwingerReset_timeout"]
[connection signal="timeout" from="RandomSound" to="." method="_on_RandomSound_timeout"]
